# lab-11-process

./: CMakeLists.txt  README.md
include/: Builder.hpp  Process.hpp
sources/: Builder.cpp  Process.cpp  main.cpp
tests/: test.cpp
